add first commit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/blog.css">
     <title>My First ever github repo</title>
 </head>
 <body>
-    
+    <div>
+        <h3>My First website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, cumque. Optio corrupti velit illum aperiam dicta ipsam, quisquam repudiandae nobis amet obcaecati a laborum omnis voluptatum atque odio tenetur? Reprehenderit.</p>
+    </div>
 </body>
 </html>
