--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>My First website</h3>
+        <h3>My First blog</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, cumque. Optio corrupti velit illum aperiam dicta ipsam, quisquam repudiandae nobis amet obcaecati a laborum omnis voluptatum atque odio tenetur? Reprehenderit.</p>
+    </div>
+    <div>
+        <h3>My second blog</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, cumque. Optio corrupti velit illum aperiam dicta ipsam, quisquam repudiandae nobis amet obcaecati a laborum omnis voluptatum atque odio tenetur? Reprehenderit.</p>
+    </div>
+    <div>
+        <h3>My third blog</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, cumque. Optio corrupti velit illum aperiam dicta ipsam, quisquam repudiandae nobis amet obcaecati a laborum omnis voluptatum atque odio tenetur? Reprehenderit.</p>
     </div>
 </body>
