--- a/index.html
+++ b/index.html
@@ -19,5 +19,16 @@
         <h3>My third blog</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, cumque. Optio corrupti velit illum aperiam dicta ipsam, quisquam repudiandae nobis amet obcaecati a laborum omnis voluptatum atque odio tenetur? Reprehenderit.</p>
     </div>
+    <div>
+        <h3>how to push incremental code</h3>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningfull commit massege</li>
+            <li>git push</li>
+        </ol>
+    </div>
+    <div class="picture">
+        <h3>Execute a picture of robot</h3>
+        <img src="images/ai doctorobot.png"/>
 </body>
 </html>
